--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -2,6 +2,10 @@
 
 <%= form_for(@task) do |f| %>
 
+<%= f.label :status, "テキスト" %>
+
+<%= f.text_field :status %>
+
 <%= f.label :content, 'タスク' %>
 
 <%= f.text_field :content %>
