--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -1,27 +1,45 @@
-<%= form_for(task) do |f| %>
+<div class="row">
+  <div class="col-xs-12">
+  <div class="col-md-offset-2 col-md-8">
+  <div class="col-lg-offset-3 col-lg-6">
 
-<% if task.errors.any? %>
+  <%= form_for(task) do |f| %>
 
-<div id="error_explanation">
-  <ul>
-    <% task.errors.full_messages.each do |message| %>
-    <li>
-      <%= message %>
-    </li>
-    <% end %>
-  </ul>
+  <% if task.errors.any? %>
+
+  <div id="error_explanation">
+    <ul>
+      <% task.errors.full_messages.each do |message| %>
+      <li>
+        <%= message %>
+      </li>
+      <% end %>
+    </ul>
+  </div>
+
+  <% end %>
+
+  <div class="form-group">
+  
+  <%= f.label :status, "テキスト" %>
+
+  <%= f.text_field :status, class: "form-control" %>
+
+  </div>
+
+  <div class="form-group">
+
+  <%= f.label :content, 'タスク' %>
+
+  <%= f.text_field :content, class: "form-control" %>
+
+  </div>
+
+  <%= f.submit '投稿', class: "btn btn-primary" %>
+
+  <% end %>
+  
+  </div>
+  </div>
+  </div>
 </div>
-
-<% end %>
-
-<%= f.label :status, "テキスト" %>
-
-<%= f.text_field :status %>
-
-<%= f.label :content, 'タスク' %>
-
-<%= f.text_field :content %>
-
-<%= f.submit '投稿' %>
-
-<% end %>
