--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,15 +1,24 @@
-<nav class="navbar navbar-default">
-  <div class="container-fluid">
-  <div class="navbar-header">
-    <!-- 横幅が狭い時に出るハンバーガーボタン -->
-    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar">
-    <span class="icon-bar"></span>
-    <span class="icon-bar"></span>
-    <span class="icon-bar"></span>
-    </button>
+<header>
+  <nav class="navbar navbar-inverse navbar-static-top">
+    <div class="container">
+    <div class="navbar-header">
+      <!-- 横幅が狭い時に出るハンバーガーボタン -->
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar">
+      <span class="icon-bar"></span>
+      <span class="icon-bar"></span>
+      <span class="icon-bar"></span>
+      </button>
 
-    <!-- ホームへ戻るリンク。ブランドロゴなどを置く。 -->
-    <a class="navbar-brand" href="/">Tasklist</a>
-  </div>
-  </div><!-- /.container-fluid -->
-</nav>
+      <!-- ホームへ戻るリンク。ブランドロゴなどを置く。 -->
+      <a class="navbar-brand" href="/">Tasklist</a>
+    </div>
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav navbar-right">
+        <li>
+           <%= link_to  '新規タスクの投稿', new_task_path %>
+        </li>
+      </ul>
+    </div>
+    </div><!-- /.container-fluid -->
+  </nav>
+</header>
